--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
             <p style="font-size: 20px;"> 
                <b style="font-size: 30px;color:skyblue">Hello!I'm js Fusaiha, </b>A dedicated B.Sc Information Technology student currently in my third year of studies. My journey in the world of technology has been filled with exciting challenges and opportunities, and I'm passionate about front-end web development.</p>
                 <br><br> 
-               <h2  id="about"><b style="font-size: 30px;">My ghf Journey So Far:</b></h2><br>  
+               <h2  id="about"><b style="font-size: 30px;">My Journey So Far:</b></h2><br>  
                 
                 <p style="font-size: 20px;">In my pursuit of knowledge and creativity, I've had the privilege of working on several web development projects. Notable among them is the "Railway Reservation Project," where I had the chance to create an efficient online reservation system. 
                 This project tested my problem-solving skills and allowed me to apply my knowledge of <b  style="font-size: 20px;color:skyblue"><br>HTML, CSS, JavaScript, and PHP </b>to build a real-world solution.
